@@ -26,3 +26,5 @@ validateupnpreplyparse
 testportlistingparse
 validateportlistingparse
 listdevices
+testigddescparse
+validateigddescparse
