@@ -1,0 +1,90 @@
+<?xml version="1.0"?>
+<root xmlns="urn:schemas-upnp-org:device-1-0">
+  <specVersion>
+    <major>1</major>
+    <minor>0</minor>
+  </specVersion>
+  <device>
+    <pnpx:X_hardwareId xmlns:pnpx="http://schemas.microsoft.com/windows/pnpx/2005/11">VEN_0129&amp;DEV_0000&amp;SUBSYS_03&amp;REV_250417</pnpx:X_hardwareId>
+    <pnpx:X_compatibleId xmlns:pnpx="http://schemas.microsoft.com/windows/pnpx/2005/11">GenericUmPass</pnpx:X_compatibleId>
+    <pnpx:X_deviceCategory xmlns:pnpx="http://schemas.microsoft.com/windows/pnpx/2005/11">NetworkInfrastructure.Gateway</pnpx:X_deviceCategory>
+    <df:X_deviceCategory xmlns:df="http://schemas.microsoft.com/windows/2008/09/devicefoundation">Network.Gateway</df:X_deviceCategory>
+    <deviceType>urn:schemas-upnp-org:device:InternetGatewayDevice:2</deviceType>
+    <friendlyName>Orange Livebox</friendlyName>
+    <manufacturer>Sagemcom</manufacturer>
+    <manufacturerURL>http://www.sagemcom.com/</manufacturerURL>
+    <modelName>Residential Livebox,(DSL,WAN Ethernet)</modelName>
+    <UDN>uuid:87895a19-50f9-3736-a87f-115c230155f8</UDN>
+    <modelDescription>Sagemcom,fr,SG30_sip-fr-4.28.35.1</modelDescription>
+    <modelNumber>3</modelNumber>
+    <serialNumber>LK14129DP441489</serialNumber>
+    <presentationURL>http://192.168.1.1</presentationURL>
+    <UPC></UPC>
+    <iconList>
+      <icon>
+        <mimetype>image/png</mimetype>
+        <width>16</width>
+        <height>16</height>
+        <depth>8</depth>
+        <url>/87895a19/ligd.png</url>
+      </icon>
+    </iconList>
+    <deviceList>
+      <device>
+        <deviceType>urn:schemas-upnp-org:device:WANDevice:2</deviceType>
+        <friendlyName>WANDevice</friendlyName>
+        <manufacturer>Sagemcom</manufacturer>
+        <manufacturerURL>http://www.sagemcom.com/</manufacturerURL>
+        <modelDescription>WAN Device on Sagemcom,fr,SG30_sip-fr-4.28.35.1</modelDescription>
+        <modelName>Residential Livebox,(DSL,WAN Ethernet)</modelName>
+        <modelNumber>3</modelNumber>
+        <modelURL>http://www.sagemcom.com/</modelURL>
+        <serialNumber>LK14129DP441489</serialNumber>
+        <presentationURL>http://192.168.1.1</presentationURL>
+        <UDN>uuid:e2397374-53d8-3fc6-8306-593ba1a34625</UDN>
+        <UPC></UPC>
+        <serviceList>
+          <service>
+            <serviceType>urn:schemas-upnp-org:service:WANCommonInterfaceConfig:1</serviceType>
+            <serviceId>urn:upnp-org:serviceId:WANCommonIFC1</serviceId>
+            <controlURL>/87895a19/upnp/control/WANCommonIFC1</controlURL>
+            <eventSubURL>/87895a19/upnp/control/WANCommonIFC1</eventSubURL>
+            <SCPDURL>/87895a19/gateicfgSCPD.xml</SCPDURL>
+          </service>
+        </serviceList>
+        <deviceList>
+          <device>
+            <deviceType>urn:schemas-upnp-org:device:WANConnectionDevice:2</deviceType>
+            <friendlyName>WANConnectionDevice</friendlyName>
+            <manufacturer>Sagemcom</manufacturer>
+            <manufacturerURL>http://www.sagemcom.com/</manufacturerURL>
+            <modelDescription>WanConnectionDevice on Sagemcom,fr,SG30_sip-fr-4.28.35.1</modelDescription>
+            <modelName>Residential Livebox,(DSL,WAN Ethernet)</modelName>
+            <modelNumber>3</modelNumber>
+            <modelURL>http://www.sagemcom.com/</modelURL>
+            <serialNumber>LK14129DP441489</serialNumber>
+            <presentationURL>http://192.168.1.1</presentationURL>
+            <UDN>uuid:44598a08-288e-32c9-8a4d-d3c008ede331</UDN>
+            <UPC></UPC>
+            <serviceList>
+              <service>
+                <serviceType>urn:schemas-upnp-org:service:WANPPPConnection:2</serviceType>
+                <serviceId>urn:upnp-org:serviceId:WANIPConn1</serviceId>
+                <controlURL>/87895a19/upnp/control/WANIPConn1</controlURL>
+                <eventSubURL>/87895a19/upnp/control/WANIPConn1</eventSubURL>
+                <SCPDURL>/87895a19/gateconnSCPD_PPP.xml</SCPDURL>
+              </service>
+             <service>
+                <serviceType>urn:schemas-upnp-org:service:WANIPv6FirewallControl:1</serviceType>
+                <serviceId>urn:upnp-org:serviceId:WANIPv6FwCtrl1</serviceId>
+                <controlURL>/87895a19/upnp/control/WANIPv6FwCtrl1</controlURL>
+                <eventSubURL>/87895a19/upnp/control/WANIPv6FwCtrl1</eventSubURL>
+                <SCPDURL>/87895a19/wanipv6fwctrlSCPD.xml</SCPDURL>
+              </service>
+            </serviceList>
+          </device>
+        </deviceList>
+      </device>
+    </deviceList>
+  </device>
+</root>
