@@ -1,4 +1,4 @@
-$Id: Changelog.txt,v 1.199 2014/11/05 06:06:37 nanard Exp $
+$Id: Changelog.txt,v 1.202 2014/11/17 19:10:28 nanard Exp $
 miniUPnP client Changelog.
 
 2014/11/17:
@@ -6,6 +6,7 @@ miniUPnP client Changelog.
     upnpDiscoverDevices() / upnpDiscoverAll() functions
     listdevices executable
   increment API_VERSION to 12
+  validate igd_desc_parse
 
 2014/11/13:
   increment API_VERSION to 11
